feat(foot): fix the foot configuration file foot.init

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,43 +1,71 @@
+term  = xterm-256color
+font  = LiterationMono Nerd Font:size=20
+pad   = 0x0
+
 [key-bindings]
-Copy=Cmd+c
-Paste=Cmd+v
-Cmd+Ctrl+lbracket=\x07[
-Cmd+lbracket=\x07\x28
-Cmd+rbracket=\x07\x29
-Cmd+backslash=\x07%
-Cmd+minus=\x07\"
-Cmd+Shift+g=\x07g
-Cmd+f=\x07\x54
-Cmd+s=\x07s
-Cmd+p=\x07L
-Cmd+u=\x07u
-Cmd+a=\x07c
-Cmd+x=\x07x
-Cmd+z=\x07z
-Cmd+Tab=\x07n
-Cmd+o=\x07p
-Ctrl+lbracket=\x07{
-Ctrl+rbracket=\x07}
-Ctrl+Space=\x07
-Cmd+d=\x07F
-Cmd+comma=\x07,
-Cmd+semicolon=\x07:
-Ctrl+1=\x071
-Ctrl+2=\x072
-Ctrl+3=\x073
-Ctrl+4=\x074
-Ctrl+5=\x075
-Ctrl+6=\x076
-Ctrl+7=\x077
-Ctrl+8=\x078
-Ctrl+9=\x079
-Alt+1=\x07s0
-Alt+2=\x07s1
-Alt+3=\x07s2
-Alt+4=\x07s3
-Alt+5=\x07s4
-Alt+6=\x07s5
-Alt+7=\x07s6
-Alt+8=\x07s7
-Alt+9=\x07s8
-A1lt+0=\x07s9
+clipboard-copy=Mod4+c
+clipboard-paste=Mod4+v
+
+[text-bindings]
+\x07c=Mod4+a
+\x07[=Mod4+Control+bracketleft
+\x07[=Mod4+Control+bracketleft
+\x07\x28=Mod4+bracketleft
+\x07\x29=Mod4+bracketright
+\x07%=Mod4+backslash
+\x07"=Mod4+minus
+\x07g=Mod4+Shift+g
+\x07\x54=Mod4+f
+\x07s=Mod4+s
+\x07L=Mod4+p
+\x07u=Mod4+u
+\x07c=Mod4+a
+\x07x=Mod4+x
+\x07z=Mod4+z
+\x07n=Mod4+Tab
+\x07p=Mod4+o
+\x07{=Control+bracketleft
+\x07}=Control+bracketright
+\x07\x20=Control+space
+\x07F=Mod4+d
+\x07,=Mod4+comma
+\x07:=Mod4+semicolon
+\x071=Control+1
+\x072=Control+2
+\x073=Control+3
+\x074=Control+4
+\x075=Control+5
+\x076=Control+6
+\x077=Control+7
+\x078=Control+8
+\x079=Control+9
+\x07s0=Mod1+1
+\x07s1=Mod1+2
+\x07s2=Mod1+3
+\x07s3=Mod1+4
+\x07s4=Mod1+5
+\x07s5=Mod1+6
+\x07s6=Mod1+7
+\x07s7=Mod1+8
+\x07s8=Mod1+9
+\x07s9=Mod1+0
+
+[colors]
+foreground=cad3f5 # Text
+background=24273a # Base
+regular0=494d64   # Surface 1
+regular1=ed8796   # red
+regular2=a6da95   # green
+regular3=eed49f   # yellow
+regular4=8aadf4   # blue
+regular5=f5bde6   # pink
+regular6=8bd5ca   # teal
+regular7=b8c0e0   # Subtext 1
+bright0=5b6078    # Surface 2
+bright1=ed8796    # red
+bright2=a6da95    # green
+bright3=eed49f    # yellow
+bright4=8aadf4    # blue
+bright5=f5bde6    # pink
+bright6=8bd5ca    # teal
+bright7=a5adcb    # Subtext 0
