--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -15,9 +15,9 @@ bind = SUPERSHIFT ,M ,fullscreen, 0
 # bind = SUPER, B, exec, librewolf
 bind = SUPER, RETURN, exec, $SCRIPT/toggle_start.sh alacritty
 bind = SUPERSHIFT, RETURN, exec, $SCRIPT/toggle_start.sh emacsclient
-bind = SUPERCTRL, A, exec, alacritty -e ssh hk-tccloud.com
-bind = SUPERCTRL, S, exec, alacritty -e ssh tk-tccloud.com
-bind = SUPERCTRL, D, exec, alacritty -e ssh openwrt-arch.local
+bind = SUPERCTRL, A, exec, kitty -e ssh hk-tccloud.com
+bind = SUPERCTRL, S, exec, kitty -e ssh tk-tccloud.com
+bind = SUPERCTRL, D, exec, kitty -e ssh openwrt-arch.local
 bind = SUPERCTRL, Q, exec, $SCRIPT/translate.sh
 bind = SUPERCTRL, M, exec, killall -SIGUSR1 waybar # waybar: toggle visibility
 bind = SUPERSHIFT, F, exec, firefox
@@ -41,7 +41,7 @@ bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screensh
 bind = SUPERSHIFT, R, exec, wf-recorder -g "$(slurp)"          # Screen recorder
 
 # Emoji selector
-bind=SUPER,E,exec,rofi -modi emoji -show emoji
+# bind=SUPER,E,exec,rofi -modi emoji -show emoji
 
 # bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
 
