--- a/config/hypr/windowrule.conf
+++ b/config/hypr/windowrule.conf
@@ -1,7 +1,7 @@
 # Float Necessary Windows
 # windowrulev2 = float, class:^(rofi)$
-# windowrulev2 = float, class:^(pavucontrol)$
-# windowrulev2 = float, class:^()$,title:^(Picture in picture)$
+windowrulev2 = float, class:^(pavucontrol)$
+windowrulev2 = float, class:^()$,title:^(Picture in picture)$
 # windowrulev2 = float, class:^(alacritty)$
 windowrule = float, Alacritty
 windowrule = move 0 32, Alacritty
