--- a/config/hypr/base.conf
+++ b/config/hypr/base.conf
@@ -1,6 +1,6 @@
 # You have to change this based on your monitor
 # monitor = , preferred, auto, auto
-monitor = eDP-1, 2560x1440@60, 0x0, 1
+monitor = , 2560x1440@60, 0x0, 1
 # monitor = eDP-1, 1920x1080@144, 0x0, 1
 
 input {
