chore: change some config

--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -7,14 +7,17 @@ bindm = SUPER, mouse:273, resizewindow
 bind = ALT, SPACE, exec, rofi -show drun
 bind = SUPER, Q, killactive
 bind = SUPER, T, togglefloating,
-# bind = SUPER, ESC, exec, wl-paste | trans -sp
+# bind = SUPER, Escape, exec,
+bind = SUPER, Escape, exec, $SCRIPT/speak.sh
+# bind = SUPER, Escape, exec, mimic -t "$(wl-paste)"
 bind = SUPER, G, exec, chromium --gtk-version=4
 bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = SUPERSHIFT ,M ,fullscreen, 0
 # bind = SUPER, B, exec, librewolf
 bind = SUPER, RETURN, exec, $SCRIPT/toggle_start.sh alacritty
-bind = SUPERSHIFT, RETURN, exec, $SCRIPT/toggle_start.sh emacsclient
+bind = SUPERCTRL, RETURN, exec, $SCRIPT/toggle_start.sh emacsclient
+bind = SUPERSHIFT, RETURN, exec, footclient
 bind = SUPERCTRL, A, exec, kitty -e ssh hk-tccloud.com
 bind = SUPERCTRL, S, exec, kitty -e ssh tk-tccloud.com
 bind = SUPERCTRL, D, exec, kitty -e ssh openwrt-arch.local
