--- a/config/keyd/app.conf
+++ b/config/keyd/app.conf
@@ -1,35 +1,30 @@
 [chromium]
-
 control.[ = macro(C-S-tab)
 control.] = macro(C-tab)
 control.a = home
 control.e = end
 control.j = down
 control.k = up
-control.n = down
-control.p = up
-control.f = right
-control.b = left
 control.d = delete
 meta.a = macro(C-a)
-meta.[ = macro(C-S-tab)
-meta.] = macro(C-tab)
+meta.esc = macro(C-c M-esc)
 
 [firefox]
-
 control.[ = macro(C-S-tab)
 control.] = macro(C-tab)
 control.a = home
 control.e = end
-control.n = down
-control.p = up
 control.j = down
 control.k = up
-control.f = right
-control.b = left
 control.d = delete
 meta.a = macro(C-a)
-meta.[ = macro(C-S-tab)
-meta.] = macro(C-tab)
+meta.esc = macro(C-c M-esc)
 
-[kitty]
+[alacritty]
+meta.esc = macro(y M-esc)
+
+[emacs]
+meta.esc = macro(y M-esc)
+
+[emacsclient]
+meta.esc = macro(y M-esc)
