--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -33,6 +33,8 @@ bind -r h resize-pane -L 5
 
 set  -g status-keys vi
 setw -g mode-keys   vi
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel
 
 set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
 set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
