--- a/config/hypr/base.conf
+++ b/config/hypr/base.conf
@@ -15,7 +15,7 @@ general {
     col.active_border = rgb(cdd6f4)
     col.inactive_border = rgba(595959aa)
 
-    layout = master
+    layout = dwindle
 
     sensitivity = 1.0 # for mouse cursor
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
@@ -24,7 +24,7 @@ general {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
     rounding = 5
-    blur = 1
+    blur = 0
     blur_size = 1 # minimum 1
     blur_passes = 1 # minimum 1, more passes = more resource intensive.
     blur_new_optimizations = true
@@ -52,7 +52,7 @@ animations {
     animation = border,     1, 10, default
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+# See [https://wiki.hyprland.org/Configuring/Dwindle-Layout/] for more
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
