chore: enable mimic to pause

--- a/config/hypr/env/env_nvidia.conf
+++ b/config/hypr/env/env_nvidia.conf
@@ -33,7 +33,7 @@ env = SDL_VIDEODRIVER, wayland
 env = CLUTTER_BACKEND, wayland
 
 # QT Variables
-# QT: Use wayland if available, fall back to x11 if not.
+# QT: Use wayland if available, fall back to xcb if not.
 env = QT_QPA_PLATFORM, wayland,xcb
 
 # (From the QT documentation) enables automatic scaling, based on the monitor’s pixel density
