--- a/config/hypr/windowrule.conf
+++ b/config/hypr/windowrule.conf
@@ -1,5 +1,5 @@
 # Float Necessary Windows
-# windowrulev2 = float, class:^(rofi)$
+windowrulev2 = float, class:^(rofi)$
 windowrulev2 = float, class:^(pavucontrol)$
 windowrulev2 = float, class:^()$,title:^(Picture in picture)$
 # windowrulev2 = float, class:^(alacritty)$
@@ -7,7 +7,7 @@ windowrule = float, Alacritty
 windowrule = move 0 32, Alacritty
 windowrule = size 100% 100%, Alacritty
 windowrule = float, ^(emacs|emacsclient)$
-windowrule = move 25% 0, ^(emacs|emacsclient)$
+windowrule = move 25% 32, ^(emacs|emacsclient)$
 windowrule = size 50% 100%, ^(emacs|emacsclient)$
 windowrule = opacity 0.9 0.6, ^(emacs|emacsclient)$
 # windowrulev2 = move 0 32, class:^(alacritty)$
