--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,3 +1,4 @@
+$SCRIPT = ~/.config/hypr/scripts
 source = ~/.config/hypr/base.conf
 source = ~/.config/hypr/exec-once.conf
 source = ~/.config/hypr/windowrule.conf
