--- a/config/hypr/exec-once.conf
+++ b/config/hypr/exec-once.conf
@@ -2,10 +2,10 @@ exec-once = ~/.config/hypr/scripts/screensharing.sh
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # For Screen Sharing
 exec-once = waybar # For status bar
 exec-once = dunst  # For Notification
-exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill # Wallpaper
+exec-once = sh -c $SCRIPT/wallpaper_switch.sh # Wallpaper
 exec-once = fcitx5 -d --replace # For keyboard
 exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
-exec-once = wl-paste --type text --watch cliphist store  # For clipboard history Stores only text data
+exec-once = wl-paste --type text --watch cliphist -max-dedupe-search 1000 -max-items 1000 store # For clipboard history Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d    # key map: use emacs key mode for chromium
 exec-once = emacs --daemon=doom
