--- a/config/hypr/windowrule.conf
+++ b/config/hypr/windowrule.conf
@@ -5,10 +5,10 @@ windowrulev2 = float, class:^()$,title:^(Picture in picture)$
 # windowrulev2 = float, class:^(alacritty)$
 windowrule = float, Alacritty
 windowrule = move 0 32, Alacritty
-windowrule = size 100% 100%, Alacritty
+windowrule = size 100% 1408, Alacritty
 windowrule = float, ^(emacs|emacsclient)$
 windowrule = move 25% 32, ^(emacs|emacsclient)$
-windowrule = size 50% 100%, ^(emacs|emacsclient)$
+windowrule = size 50% 1408, ^(emacs|emacsclient)$
 windowrule = opacity 0.9 0.6, ^(emacs|emacsclient)$
 # windowrulev2 = move 0 32, class:^(alacritty)$
 # windowrulev2 = size 100% 100%, class:^(alacritty)$
