chore: update-sys

--- a/config/keyd/app.conf
+++ b/config/keyd/app.conf
@@ -7,6 +7,7 @@ control.j = down
 control.k = up
 control.d = delete
 meta.a = macro(C-a)
+meta.` = macro(C-c M-esc)
 meta.esc = macro(C-c M-esc)
 
 [firefox]
@@ -17,14 +18,24 @@ control.e = end
 control.j = down
 control.k = up
 control.d = delete
+control.1 = macro(A-1)
+control.2 = macro(A-2)
+control.3 = macro(A-3)
+control.4 = macro(A-4)
+control.5 = macro(A-5)
+control.6 = macro(A-6)
+control.7 = macro(A-7)
+control.8 = macro(A-8)
+control.9 = macro(A-9)
 meta.a = macro(C-a)
+meta.` = macro(C-c M-esc)
 meta.esc = macro(C-c M-esc)
 
 [alacritty]
-meta.esc = macro(y M-esc)
+meta.` = macro(y M-esc)
 
 [emacs]
-meta.esc = macro(y M-esc)
+meta.` = macro(y M-esc)
 
 [emacsclient]
-meta.esc = macro(y M-esc)
+meta.` = macro(y M-esc)
