chore: change wallpaper_switch

--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -1,15 +1,11 @@
-# Move/resize windows with SUPER + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
-# example binds
 bind = ALT, SPACE, exec, rofi -show drun
 bind = SUPER, Q, killactive
 bind = SUPER, T, togglefloating,
-# bind = SUPER, Escape, exec,
 bind = SUPER, Escape, exec, $SCRIPT/speak.sh
-# bind = SUPER, Escape, exec, mimic -t "$(wl-paste)"
-bind = SUPER, G, exec, chromium --gtk-version=4
+bind = SUPER, G, exec, chromium
 bind = SUPER, M, fullscreen, 1
 bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = SUPERSHIFT ,M ,fullscreen, 0
