--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
   path = config/zsh/themes/powerlevel10k
   url = https://github.com/romkatv/powerlevel10k.git
   shallow = true
+[submodule "librocksdb-sys/rocksdb"]
+	path = librocksdb-sys/rocksdb
+	url = https://github.com/facebook/rocksdb.git
