--- a/config/hypr/exec-once.conf
+++ b/config/hypr/exec-once.conf
@@ -1,4 +1,4 @@
-exec-once = ~/.config/hypr/scripts/screensharing.sh
+exec-once = $SCRIPT/screensharing.sh
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # For Screen Sharing
 exec-once = waybar # For status bar
 exec-once = dunst  # For Notification
@@ -8,7 +8,7 @@ exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 300 'hyprctl
 exec-once = wl-paste --type text --watch cliphist -max-dedupe-search 1000 -max-items 1000 store # For clipboard history Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d    # key map: use emacs key mode for chromium
-exec-once = emacs --daemon=doom
+exec-once = emacs --daemon
 exec-once = foot --server
 
 # exec-once = teamviewer --daemon start # TeamViewer
