--- a/config/hypr/env/env_nvidia.conf
+++ b/config/hypr/env/env_nvidia.conf
@@ -34,7 +34,8 @@ env = CLUTTER_BACKEND, wayland
 
 # QT Variables
 # QT: Use wayland if available, fall back to xcb if not.
-env = QT_QPA_PLATFORM, wayland,xcb
+# env = QT_QPA_PLATFORM,wayland,xcb
+env = QT_QPA_PLATFORM,wayland
 
 # (From the QT documentation) enables automatic scaling, based on the monitor’s pixel density
 # https://doc.qt.io/qt-5/highdpi.html
