--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -8,11 +8,6 @@ set -g history-limit 1000000  # increase history size to 1M
 set -g mouse on               # enable mouse support
 set -g renumber-windows on    # renumber all windows when any window is closed
 set -g set-clipboard on       # use system clipboard
-set -g status-interval 2      # update status every 2 seconds
-set -g status-keys emacs      # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys, even for vim users
-set -g status-left-length 200 # increase status line length
-set -g status-position top    # change the tmux bar position
-set -g status-right ''        # empty
 
 bind g new-window -n '' lazygit
 bind '%' split-window -c '#{pane_current_path}' -h
@@ -37,13 +32,18 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'wl-copy'
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
-set -g status-left '#[fg=blue,bold]#S #[fg=white,nobold]'
-set -ga status-left "#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)"
+set -g status-interval 2      # update status every 2 seconds
+set -g status-keys emacs      # emacs key bindings in tmux command prompt (prefix + :) are better than vi keys, even for vim users
+set -g status-left-length 200 # increase status line length
+set -g status-position top    # change the tmux bar position
+set -g status-right ''        # empty
+set -g status-left  '#[fg=blue,bold]#S #[fg=white,nobold]'
+set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'
 set -g pane-active-border-style     'fg=magenta,bg=default'
 set -g pane-border-style            'fg=brightblack,bg=default'
 set -g status-style                 'bg=default' # transparent
 set -g window-status-current-format '#[fg=magenta]#W'
-set -g window-status-format          '#[fg=gray]#W'
+set -g window-status-format         '#[fg=gray]#W'
 set -g mode-style bg=default,fg=yellow
 set -g message-style bg=default,fg=yellow
 set -g message-command-style bg=default,fg=yellow
@@ -57,7 +57,7 @@ set -g @t-fzf-prompt '  '
 set -g @fzf-url-history-limit '2000'
 
 set-option -g  default-terminal   'tmux-256color'
-set-option -sa terminal-features ',*256*:RGB'
+set-option -sa terminal-features  ',*256*:RGB'
 
 # Focus events enabled for terminals that support them
 set -g focus-events on
