chore(hypr): hyprland scripts

--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -1,45 +1,41 @@
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
-bind = ALT, SPACE, exec, rofi -show drun
+bind = ALTCTRL, SPACE, exec, rofi -show drun
+bind = ALT, SPACE, exec, $SCRIPT/toggle_start.sh fzf-nova
+bind = SUPER, E, exec, rofi -modi emoji -show emoji # Emoji selector
+bind = SUPER, Escape, exec, $SCRIPT/speak.sh
 bind = SUPER, Q, killactive
 bind = SUPER, T, togglefloating,
-bind = SUPER, Escape, exec, $SCRIPT/speak.sh
 bind = SUPER, G, exec, chromium
 bind = SUPER, M, fullscreen, 1
-bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = SUPERSHIFT ,M ,fullscreen, 0
-# bind = SUPER, B, exec, librewolf
+# bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
+bind = SUPERSHIFT, M ,fullscreen, 0
 bind = SUPER, RETURN, exec, $SCRIPT/toggle_start.sh alacritty
 bind = SUPERCTRL, RETURN, exec, $SCRIPT/toggle_start.sh emacsclient
-bind = SUPERSHIFT, RETURN, exec, footclient
 bind = SUPERCTRL, A, exec, kitty -e ssh hk-tccloud.com
-bind = SUPERCTRL, S, exec, kitty -e ssh tk-tccloud.com
 bind = SUPERCTRL, D, exec, kitty -e ssh openwrt-arch.local
 bind = SUPERCTRL, Q, exec, $SCRIPT/translate.sh
 bind = SUPERCTRL, M, exec, killall -SIGUSR1 waybar # waybar: toggle visibility
+bind = SUPERSHIFT, RETURN, exec, footclient
 bind = SUPERSHIFT, F, exec, firefox
-bind = SUPERSHIFT, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPERSHIFT, V, exec, $SCRIPT/toggle_start.sh jiantie-list
+bind = SUPERSHIFT, C, exec, bash $SCRIPT/hypr_picker.sh
 # bind = SUPER, E, exec, pcmanfm
 # bind = SUPER, P, pseudo,
 # bind = SUPER, ESCAPE, exec, sudo systemctl suspend
 
-bind = SUPERALT, Up, exec, ~/.config/hypr/scripts/volume up
-bind = SUPERALT, Down, exec, ~/.config/hypr/scripts/volume down
-bind = SUPERALT, M, exec, ~/.config/hypr/scripts/volume mute
+bind = SUPERALT, Up, exec, $SCRIPT/volume up
+bind = SUPERALT, Down, exec, $SCRIPT/volume down
+bind = SUPERALT, M, exec, $SCRIPT/volume mute
 
 # bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
 # bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
-# TODO hyprPicker not working Nvidia
-# bind=SUPERSHIFT,C,exec,bash ~/.config/hypr/scripts/hyprPicker.sh
 
 # bind=SUPERSHIFT,E,exec,wlogout
-bind = SUPERSHIFT, P, exec, pomotroid --in-process-gpu         # take pomotroid
-bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
-bind = SUPERSHIFT, R, exec, wf-recorder -g "$(slurp)"          # Screen recorder
-
-# Emoji selector
-# bind=SUPER,E,exec,rofi -modi emoji -show emoji
+bind = SUPERSHIFT, P, exec, pomotroid --in-process-gpu          # take pomotroid
+bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -  # take a screenshot
+bind = SUPERSHIFT, R, exec, $SCRIPT/toggle_start.sh wf-recorder # Screen recorder
 
 # bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
 
