--- a/config/hypr/windowrule.conf
+++ b/config/hypr/windowrule.conf
@@ -12,7 +12,9 @@ windowrule = opacity 0.9 0.6, ^(emacs|emacsclient)$
 
 # Increase background transparency
 # windowrulev2 = opacity 1.0 override 1 override, title:^(alacritty)$
-# windowrulev2 = float, class:^(emacs.*)$, title:^(emacs.*)$
+windowrulev2 = float, class:^(kitty)$
+windowrulev2 = size 70% 60%, class:^(kitty)$
+windowrulev2 = center, class:^(kitty)$
 # windowrulev2 = opacity 1 1, class:^(alacritty)$
 # windowrulev2 = opacity 0.8 0.8, class:^(kitty)$
 windowrulev2 = opacity 0.9 0.8, class:^(thunar)$
