--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,14 +1,15 @@
 {
     "layer": "top", // Waybar at top layer
-    "height": 30, // Waybar height (to be removed for auto height)
+    "height": 30,   // Waybar height (to be removed for auto height)
     // "padding-top": 6,
     // "padding-bottom": 6,
     // "padding-left": 10,
     // "padding-right": 10,
-    "spacing": 2, // Gaps between modules (4px)
-    // "modules-left": ["custom/launcher", "cpu", "memory", "wlr/workspaces"],
+    "spacing": 2,   // Gaps between modules (4px)
     "modules-left": [
-      "wlr/workspaces"
+      "wlr/workspaces",
+      "custom/weather",
+      "temperature"
     ],
     "modules-center": [
       "idle_inhibitor",
@@ -58,15 +59,13 @@
         "spacing": 10
     },
     "clock": {
-      // "format": "<span color='#ff5c57'> </span>{:%H:%M}",
       "format": "{:%Y-%m-%d}",
       // "format-alt": "  {:%Y-%m-%d}",
       "tooltip-format": "<big>{:%Y-%m-%d}</big>\n<tt>{calendar}</tt>",
     },
     "custom/time": {
-      // "format": "<span color='#ff5c57'> </span>{:%H:%M}",
+      "format": "<span color='#FF5C57'> </span>{}",
       "exec": "~/.config/waybar/scripts/time.sh",
-      // "tooltip-format": "<big>{:%Y-%m-%d}</big>\n<tt>{calendar}</tt>",
       "interval": 60
     },
     "cpu": {
@@ -112,12 +111,12 @@
     },
 
    "custom/spotify": {
-    "exec": "python3 ~/.config/waybar/scripts/mediaplayer.py --player spotify",
-    "format": "{}  ",
-    "return-type": "json",
-    "on-click": "playerctl play-pause",
-    "on-double-click-right": "playerctl next",
-    "on-scroll-down": "playerctl previous",
+      "exec": "python3 ~/.config/waybar/scripts/mediaplayer.py --player spotify",
+      "format": "{}  ",
+      "return-type": "json",
+      "on-click": "playerctl play-pause",
+      "on-double-click-right": "playerctl next",
+      "on-scroll-down": "playerctl previous",
     },
     "custom/power-menu": {
         "format": " <span color='#57c7ff'>⏻ </span>",
@@ -128,13 +127,32 @@
         "on-click": "rofi -show drun",
     },
 
+    "custom/weather": {
+        //shows the current weather and forecast
+        "tooltip" : true,
+        "format" : "{}",
+        "interval" : 300,
+        "exec" : "~/.config/waybar/scripts/weather.py",
+        "return-type" : "json"
+    },
+
+    "temperature": {
+        "thermal-zone": 1,
+        "format": "",
+        "format-alt-click": "click-right",
+        "format-alt": " {temperatureC}°C",
+        "critical-threshold": 70,
+        "format-critical": " {temperatureC}°C",
+        "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+    },
+
     "idle_inhibitor": {
       "format": "{icon}",
       "format-icons": {
         "activated": "󰛐",
         "deactivated": "󰛑"
       },
-        "tooltip": true
+      "tooltip": true
     },
     "custom/updates": {
       "format": "{}",
