--- a/config/hypr/windowrule.conf
+++ b/config/hypr/windowrule.conf
@@ -2,21 +2,29 @@
 windowrulev2 = float, class:^(rofi)$
 windowrulev2 = float, class:^(pavucontrol)$
 windowrulev2 = float, class:^()$,title:^(Picture in picture)$
-windowrule = float, Alacritty
-windowrule = move 0 32, Alacritty
-windowrule = size 100% 1408, Alacritty
-windowrule = float, ^(emacs|emacsclient)$
-windowrule = move 25% 32, ^(emacs|emacsclient)$
-windowrule = size 50% 1408, ^(emacs|emacsclient)$
-windowrule = opacity 0.9 0.6, ^(emacs|emacsclient)$
-
-# Increase background transparency
-# windowrulev2 = opacity 1.0 override 1 override, title:^(alacritty)$
+windowrulev2 = float, class:^(emacs|emacsclient)$
 windowrulev2 = float, class:^(kitty)$
-windowrulev2 = size 70% 60%, class:^(kitty)$
-windowrulev2 = center, class:^(kitty)$
-# windowrulev2 = opacity 1 1, class:^(alacritty)$
-# windowrulev2 = opacity 0.8 0.8, class:^(kitty)$
+windowrulev2 = size 100% 1408, class:^(kitty)$
+windowrulev2 = move 0 32, class:^(kitty)$
+
+windowrule = float, Alacritty
+windowrule = size 100% 1408, Alacritty
+windowrule = move 0 32, Alacritty
+
+windowrulev2 = size 50% 1408, class:^(emacs|emacsclient)$
+windowrulev2 = move 25% 32, class:^(emacs|emacsclient)$
+
+windowrulev2 = size 60% 60%, title:^(fzf-mofa)$
+windowrulev2 = center, title:^(fzf-mofa)$
+
+windowrulev2 = size 60% 60%, title:^(clipboard-history)$
+windowrulev2 = center, title:^(clipboard-history)$
+
+windowrulev2 = opacity 0.9 0.6, class:^(emacs|emacsclient)$
 windowrulev2 = opacity 0.9 0.8, class:^(thunar)$
 windowrulev2 = opacity 0.9 0.8, class:^(nemo)$
 windowrulev2 = opacity 0.9 0.8, class:^(firefox)$
+
+windowrulev2 = opacity 0 0, title:^(hide)$
+windowrulev2 = size 1 1, title:^(hide)$
+windowrulev2 = move 0 0, title:^(hide)$
