--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -8,6 +8,7 @@ set -g history-limit 1000000  # increase history size to 1M
 set -g mouse on               # enable mouse support
 set -g renumber-windows on    # renumber all windows when any window is closed
 set -g set-clipboard on       # use system clipboard
+set-option -g set-titles on
 
 bind g new-window -n '' lazygit
 bind '%' split-window -c '#{pane_current_path}' -h
