--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -2,16 +2,19 @@ bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
 
 bind = ALTCTRL, SPACE, exec, rofi -show drun
-bind = ALT, SPACE, exec, $SCRIPT/toggle_start.sh fzf-nova
+bind = ALT, SPACE, exec, $SCRIPT/toggle_start.sh mofa
 bind = SUPER, E, exec, rofi -modi emoji -show emoji # Emoji selector
 bind = SUPER, Escape, exec, $SCRIPT/speak.sh
 bind = SUPER, Q, killactive
-bind = SUPER, T, togglefloating,
+bind = SUPER, T, togglefloating
 bind = SUPER, G, exec, chromium
 bind = SUPER, M, fullscreen, 1
+bind = SUPER, N, exec, $SCRIPT/mofa/_swaylock
+bind = SUPER, U, exec, $SCRIPT/toggle_start.sh mofa url
+bind = SUPER, S, exec, $SCRIPT/toggle_start.sh mofa jiantie-list-snippet
 # bind = SUPERSHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = SUPERSHIFT, M ,fullscreen, 0
-bind = SUPER, RETURN, exec, $SCRIPT/toggle_start.sh alacritty
+bind = SUPERSHIFT, M , fullscreen, 0
+bind = SUPER, RETURN, exec, $SCRIPT/toggle_start.sh kitty
 bind = SUPERCTRL, RETURN, exec, $SCRIPT/toggle_start.sh emacsclient
 bind = SUPERCTRL, A, exec, kitty -e ssh hk-tccloud.com
 bind = SUPERCTRL, D, exec, kitty -e ssh openwrt-arch.local
@@ -19,8 +22,8 @@ bind = SUPERCTRL, Q, exec, $SCRIPT/translate.sh
 bind = SUPERCTRL, M, exec, killall -SIGUSR1 waybar # waybar: toggle visibility
 bind = SUPERSHIFT, RETURN, exec, footclient
 bind = SUPERSHIFT, F, exec, firefox
-bind = SUPERSHIFT, V, exec, $SCRIPT/toggle_start.sh jiantie-list
-bind = SUPERSHIFT, C, exec, bash $SCRIPT/hypr_picker.sh
+bind = SUPERSHIFT, V, exec, $SCRIPT/toggle_start.sh mofa jiantie-list
+bind = SUPERSHIFT, C, exec, $SCRIPT/hypr_picker.sh
 # bind = SUPER, E, exec, pcmanfm
 # bind = SUPER, P, pseudo,
 # bind = SUPER, ESCAPE, exec, sudo systemctl suspend
@@ -32,7 +35,6 @@ bind = SUPERALT, M, exec, $SCRIPT/volume mute
 # bindle=,XF86MonBrightnessUp,exec,~/.config/hypr/scripts/brightness up  # increase screen brightness
 # bindle=,XF86MonBrightnessDown,exec,~/.config/hypr/scripts/brightness down # decrease screen brightnes
 
-# bind=SUPERSHIFT,E,exec,wlogout
 bind = SUPERSHIFT, P, exec, pomotroid --in-process-gpu          # take pomotroid
 bind = SUPERSHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -  # take a screenshot
 bind = SUPERSHIFT, R, exec, $SCRIPT/toggle_start.sh wf-recorder # Screen recorder
