--- a/config/hypr/env/env_nvidia.conf
+++ b/config/hypr/env/env_nvidia.conf
@@ -1,24 +1,7 @@
-# Environment Variables
-# see https://wiki.hyprland.org/Configuring/Environment-variables/
-
-# Theming Related Variables
-# Set cursor size. See FAQ below for why you might want this variable set.
-# https://wiki.hyprland.org/FAQ/
-# env = XCURSOR_SIZE,24
-
-# Set a GTK theme manually, for those who want to avoid appearance tools such as lxappearance or nwg-look
-#env = GTK_THEME,
-
-# Set your cursor theme. The theme needs to be installed and readable by your user.
-#env = XCURSOR_THEME,
-
-# the line below may help with multiple monitors
-#env = WLR_EGL_NO_MODIFIERS,1
-
 #XDG Specifications
-env = XDG_CURRENT_DESKTOP, Hyprland
-env = XDG_SESSION_TYPE,    wayland
-env = XDG_SESSION_DESKTOP, Hyprland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 # Toolkit Backend Variables
 # GTK: Use wayland if available, fall back to x11 if not.
@@ -26,11 +9,11 @@ env = GDK_BACKEND,wayland,x11
 
 # Run SDL2 applications on Wayland. Remove or set to x11 if games that
 # provide older versions of SDL cause compatibility issues
-env = SDL_VIDEODRIVER, wayland
+env = SDL_VIDEODRIVER,wayland
 
 # Clutter package already has wayland enabled, this variable
 #will force Clutter applications to try and use the Wayland backend
-env = CLUTTER_BACKEND, wayland
+env = CLUTTER_BACKEND,wayland
 
 # QT Variables
 # QT: Use wayland if available, fall back to xcb if not.
@@ -39,19 +22,19 @@ env = QT_QPA_PLATFORM,wayland
 
 # (From the QT documentation) enables automatic scaling, based on the monitor’s pixel density
 # https://doc.qt.io/qt-5/highdpi.html
-env = QT_AUTO_SCREEN_SCALE_FACTOR, 1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
 # Disables window decorations on QT applications
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION, 1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 #Tells QT based applications to pick your theme from qt5ct, use with Kvantum.
-env = QT_QPA_PLATFORMTHEME, qt5ct
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
-env = WLR_NO_HARDWARE_CURSORS, 1
-env = __GLX_VENDOR_LIBRARY_NAME, nvidia
-env = LIBVA_DRIVER_NAME, nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
 
-env = _JAVA_AWT_WM_NONEREPARENTING, 1 # # 解决java程序启动黑屏错误
+env = _JAVA_AWT_WM_NONEREPARENTING,1 # 解决java程序启动黑屏错误
 
 # 下面设置适用于多屏幕
 #export WLR_EGL_NO_MODIFIERS=1
