--- a/config/hypr/exec-once.conf
+++ b/config/hypr/exec-once.conf
@@ -4,13 +4,14 @@ exec-once = waybar # For status bar
 exec-once = dunst  # For Notification
 exec-once = sh -c $SCRIPT/wallpaper_switch.sh # Wallpaper
 exec-once = fcitx5 -d --replace # For keyboard
-exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle -w timeout 300 'swaylock -e -f -i /home/david/Pictures/Screenshots/lockscreen.jpeg' timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 # exec-once = wl-paste --type text --watch cliphist -max-dedupe-search 1000 -max-items 1000 store # For clipboard history Stores only text data
 exec-once = wl-paste --type text --watch jiantie store
 exec-once = wl-paste --type image --watch jiantie store -t 1 # For clipboard history Stores only image data
 exec-once = keyd-application-mapper -d    # key map: use emacs key mode for chromium
 exec-once = emacs --daemon
 exec-once = foot --server
+# exec-once = gammastep
 
 # exec-once = teamviewer --daemon start # TeamViewer
 # exec-once = ~/.config/hypr/scripts/startpage.sh # Start Page
