--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 linux_display_server wayland
 wayland_titlebar_color background
+allow_remote_control yes
+enabled_layouts tall
 
 font_family JetBrainsMono Nerd Font
 bold_font        auto
@@ -15,7 +17,7 @@ background_opacity 0.8
 # window settings
 initial_window_width 95c
 initial_window_height 35c
-window_padding_width 20
+window_padding_width 4
 confirm_os_window_close 0
 
 # {{{ Keybindings
