feat(mofa): bitward cli

--- a/config/hypr/bind.conf
+++ b/config/hypr/bind.conf
@@ -20,7 +20,7 @@ bind = SUPERCTRL, A, exec, kitty -e ssh hk-tccloud.com
 bind = SUPERCTRL, D, exec, kitty -e ssh openwrt-arch.local
 bind = SUPERCTRL, Q, exec, $SCRIPT/translate.sh
 bind = SUPERCTRL, M, exec, killall -SIGUSR1 waybar # waybar: toggle visibility
-bind = SUPERSHIFT, RETURN, exec, footclient
+bind = SUPERSHIFT, RETURN, exec, $SCRIPT/toggle_start.sh mofa template-note
 bind = SUPERSHIFT, F, exec, firefox
 bind = SUPERSHIFT, V, exec, $SCRIPT/toggle_start.sh mofa jiantie-list
 bind = SUPERSHIFT, C, exec, $SCRIPT/hypr_picker.sh
