--- a/config/hypr/windowrule.conf
+++ b/config/hypr/windowrule.conf
@@ -14,17 +14,21 @@ windowrule = move 0 32, Alacritty
 windowrulev2 = size 50% 1408, class:^(emacs|emacsclient)$
 windowrulev2 = move 25% 32, class:^(emacs|emacsclient)$
 
-windowrulev2 = size 60% 60%, title:^(fzf-mofa)$
-windowrulev2 = center, title:^(fzf-mofa)$
+windowrulev2 = size 50% 50%, title:^(normal-window)$
+windowrulev2 = center, title:^(normal-window)$
 
-windowrulev2 = size 60% 60%, title:^(clipboard-history)$
-windowrulev2 = center, title:^(clipboard-history)$
+windowrulev2 = size 60% 60%, title:^(bigger-window)$
+windowrulev2 = center, title:^(bigger-window)$
 
-windowrulev2 = opacity 0.9 0.6, class:^(emacs|emacsclient)$
+# windowrulev2 = opacity 0.8 0.6, title:^(mofa-smaller-window)$
+windowrulev2 = size 60% 300, title:^(smaller-window)$
+windowrulev2 = move 20% 20%, title:^(smaller-window)$
+
+windowrulev2 = opacity 0.8 0.6, class:^(emacs|emacsclient)$
 windowrulev2 = opacity 0.9 0.8, class:^(thunar)$
 windowrulev2 = opacity 0.9 0.8, class:^(nemo)$
 windowrulev2 = opacity 0.9 0.8, class:^(firefox)$
 
-windowrulev2 = opacity 0 0, title:^(hide)$
-windowrulev2 = size 1 1, title:^(hide)$
-windowrulev2 = move 0 0, title:^(hide)$
+windowrulev2 = opacity 0 0, title:^(hide-window)$
+windowrulev2 = size 1 1, title:^(hide-window)$
+windowrulev2 = move 0 0, title:^(hide-window)$
