refactor(tmux): change split-window -c key

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,8 +11,8 @@ set -g set-clipboard on       # use system clipboard
 set-option -g set-titles on
 
 bind g new-window -n '' lazygit
-bind '%' split-window -c '#{pane_current_path}' -h
-bind '"' split-window -c '#{pane_current_path}'
+bind '\' split-window -c '#{pane_current_path}' -h
+bind '-' split-window -c '#{pane_current_path}'
 
 unbind C-b                    # C-b is the emacs key (backword a char)
 bind-key C-g send-prefix
